assets/css/style.css
@font-face {
    font-family: "titleFont";
    src: url("../../assets/fonts/titleFont.woff") format("woff");
}

@font-face {
    font-family: "mainFont";
    src: url("../../assets/fonts/mainFont.woff") format("woff");
}

body, html {
    height: 100%;
    width: 100%;
    color: white;
    font-family: mainFont !important;
    opacity: 1;
    word-spacing: 10px;
    position: relative;
}

.bg {
    /*Background image:*/
    background-image: url("../images/background.png");

    /* Full height */
    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

#wrapper {
    min-height: 100vh;
    min-width: 100vw;
}

.mainArea {
    background-color: rgba(67, 176, 71, 0.9);
    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.2), 0 5px 20px 0 rgba(0, 0, 0, 0.2);
    border: solid white 2px;
    border-radius: 5px;
}

h1 {
    font-family: "titleFont";
}

/* Used to store result image style */
.images {
    border: solid white 2px;
    border-radius: 25px;
}

#startbtn {
    font-weight: bold;
}

.btn-dark:hover {
    font-weight: 100;
    border: solid white 2px;
}

#winBox, #lossBox, #remainingBox, #missBox {
    background-image: url("../images/box.jpg");
    background-size: contain;
    height: 60px;
    width: 60px;
    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.2), 0 5px 20px 0 rgba(0, 0, 0, 0.2);
    text-align: center;
    vertical-align: middle;
}

.figure-caption {
    color: white;
}

